# ai-hedge-fund-full

./: .env  .env.example  .env.template  .gitignore  .replit  AUTOMATED_RENDER_DEPLOYMENT.md  BACKEND_STABILITY_IMPROVEMENT_PLAN.md  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  DATABASE_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCS.md  DOCUMENTATION_INDEX.md  ENHANCED_STARTUP_SCRIPTS.md  LICENSE  PERFORMANCE_OPTIMIZATION_PLAN.md  PLATFORM_IMPROVEMENT_PLAN.md  PLATFORM_ROBUSTNESS_GUIDE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_SECRETS_GUIDE.md  ROADMAP.md  STABILITY_GUIDE.md  TECHNICAL_GUIDE.md  ai-hedge-fund 1.4 .code-workspace  backend_output.txt  backtest_preview.json  backtest_result_20250617_153646.json  backtest_result_20250617_153900.json  basic_backtest_demo.py  demo_real_backtest.py  deploy.sh  docker-compose.yml  ecosystem.config.js  pm2-start.sh  prepare_for_replit.sh  pyproject.toml  render.yaml  replit.nix  run.sh  run_backtest.py  (+9 more)
backend/: README.md  api.py  health_check.py  pyproject.toml  render.yaml  requirements.txt  simple_backtester.py  standalone_backtester.py
backend/services/: __init__.py  aggregation_service.py  analytics_service.py  ranking_service.py  verdict_service.py
database/: initial_data.sql  migrate.py  postgrest.conf  schema.sql  setup_database.sh
deploy_backend/: Dockerfile  api.py  pyproject.toml  render.yaml
frontend/: .env.example  .env.production  .gitignore  README.md  debug-signals.js  netlify.toml  package-lock.json  package.json  render.yaml  test-voice-parser.js  windsurf_deployment.yaml
scripts/: start-backend.sh  (+12 more)
(+75 files in other folders)
