[tool.poetry]
name = "ai-hedge-fund-backend"
version = "0.1.0"
description = "Backend API for AI Hedge Fund application"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
yfinance = "^0.2.31"
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"
questionary = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
